=== Desk Mess Mirrored ===
== Version 2.0 ==
Changelog: December 6, 2011
= Code =
* Added additional PHPDoc style documentation
* Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
* Added `DMM Use Posted` function for posts without titles
* Added minimal doc-block to each template file as relevant
* Added 'desk-mess-mirrored' loop template
* Added 'dmm-navigation' and implemented in 404, index, archive, and author template files
* Added post-formats: aside, quote, and status
* Changed `BNS Theme Version` to `DMM Theme Version` with extensive re-writes to text displayed
* Changed `my_theme_data` to `active_theme_data` in `DMM Theme Version`
* Implemented 'desk-mess-mirrored' loop in 404, archive, author, index (home, front-page), page, single templates
* Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
* Removed 'Home" link code from `dmm_list_pages`
* Removed unused images (from IE6 support)
* Renamed `BNS Dynamic Copyright` to `DMM Dynamic Copyright` (refactored changelog)
* Renamed `BNS Modified Post` to `DMM Modified Post` (refactored changelog)
* Replaced TEMPLATEPATH constant with `get_template_directory_uri`
* Updated documentation to clarify `DMM Dynamic Copyright` parameters

= CSS =
* Added some minor style to forms
* Changed bottom of post to have smaller separating margin and added a bottom border to better delineate posts
* Removed the right and bottom borders from the gallery images; and added additional elements to handle galleries up to 10 columns wide
* Removed (using comments) `background property` from `code` element
* Removed margins from a blockquote if it is within another blockquote

= Internet Browsers Reviewed =
* Apple Safari v5.1.1 (Mac)
* Apple Safari v5.1.1 (PC)
* Firefox v8.0 (Mac)
* Firefox v8.0 (PC)
* Google Chrome v15.0
* Internet Explorer v9.0
* Opera v11.52
